[tool.poetry]
name = "ntt-data-engenharia-de-dados-com-python"
version = "0.1.0"
description = ""
authors = ["Julio Okuda <julio.okuda@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
